update with john request

--- a/youtubeAT.ipynb
+++ b/youtubeAT.ipynb
@@ -47,12 +47,11 @@
     "from langchain.document_loaders import YoutubeLoader\n",
     "import os\n",
     "from dotenv import load_dotenv\n",
-    "from openai import OpenAI\n",
     "\n",
     "load_dotenv('/workspace/repos/agentic-ai/.env')\n",
     "\n",
-    "model_name, ctx_len = \"gpt-4o\", 128000\n",
-    "# model_name, ctx_len = \"llama3.1:latest\", 128000\n",
+    "model_name, ctx_len = \"gpt-4o\", 12000\n",
+    "# model_name, ctx_len = \"deepseek-r1:32b\", 128000\n",
     "# model_name, ctx_len = \"hermes3:8b\", 128000\n",
     "\n",
     "if model_name == \"gpt-4o\":\n",
@@ -66,7 +65,7 @@
     "    except Exception as e: \n",
     "        print(f\"Error pulling model: Is the Ollama server running?\\n{e}\")\n",
     "    \n",
-    "    addtion_kwargs = {\"max_new_tokens\": 4000}\n",
+    "    addtion_kwargs = {\"max_new_tokens\": 10000}\n",
     "    # system_prompt = \"You are an expert at answering questions about rules and regulations regarding Title 17—Commodity and Securities Exchanges: CHAPTER II—SECURITIES AND EXCHANGE COMMISSION. Please provide a summary of the following text, and cite any sections, rules, acts or laws (e.g. § 230.503, § 240.13a-15, Act (15 U.S.C. 781), Investment Company Act of 1940) from context that support the answer. Be detailed in your response.\"\n",
     "    llm = Ollama(model=model_name, url=\"http://127.0.0.1:11434\", context_window=ctx_len, model_type=\"chat\", is_function_calling_model=False, \n",
     "                request_timeout=1000.0, additional_kwargs=addtion_kwargs) # system_prompt=system_prompt\n",
@@ -75,13 +74,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {
     "id": "Ed5drBNesEy-"
    },
    "outputs": [],
    "source": [
-    "url = 'https://www.youtube.com/watch?v=k93EoHAg7BY' # The Impact of Artificial Intelligence - Verify You're Human; Ask Me Anything\n",
+    "url = 'https://www.youtube.com/watch?v=f6BnBvtolAw&authuser=4'\n",
     "\n",
     "loader = YoutubeLoader.from_youtube_url(url)\n",
     "\n",
@@ -90,7 +89,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -116,22 +115,121 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "from llama_index.core.response_synthesizers import TreeSummarize\n",
+    "import nest_asyncio\n",
+    "nest_asyncio.apply()\n",
+    "\n",
+    "summarizer = TreeSummarize(llm=llm, verbose=True)\n",
+    "# prompt_summary = \"You are a professional executive of AlphaTrAI. Your job is to summarize this text in great detail from a video transcription. The summary will be distributed to investors and stakeholders, so give a lot of details and examples from the transcription.\"\n",
+    "prompt_summary = \"\"\"You will be given a video transcription. Your job is to summarize the text in great detail. The summary will be used for background on the guest speaker, so give a lot of details and examples from the transcription.\"\"\"\n",
+    "\n",
+    "response = await summarizer.aget_response(prompt_summary, [documents_impact[0].page_content])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(response)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "questions_prompt = \"\"\"You will be given a video transcription, where the guest's name is Dan Tapiero. Your job is to come up with questions that you would ask Dan Tapiero based on the video transcription. The questions should be insightful and thought-provoking. Be sure to ask questions that will help you understand the speaker's perspective and opinions on the topic.\n",
+    "\n",
+    "VIDEO TRANSCRIPTION:\n",
+    "{video_trascription}\n",
+    "\n",
+    "QUESTIONS TO ASK DAN IN AN INTERVIEW:\n",
+    "\"\"\"\n",
+    "\n",
+    "response = llm.complete(questions_prompt.format(video_trascription=documents_impact[0].page_content))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(response.text)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "bio = \"Dan Tapiero is a renowned macro-focused investor with over 25 years of investing and entrepreneurial experience. He is the Founder, CEO and CIO of 1Roundtable Partners (1RT) and 10T Holdings (10T), which collectively manage over $1.4 billion of investments in 24 active companies across the Digital Asset Ecosystem (DAE). 1RT is a growth equity fund focused on mid-to-late stage companies in the DAE. Dan serves on several boards including Ledger, LEDN, Futureverse, and Quicknode. Before founding 1RT and 10T, Dan was Managing Partner of DTAP Capital Advisors, a global macro investment fund that he founded in 2003. He is Co-Founder of Gold Bullion International (GBI), a physical precious metals platform for the wealth management industry. GBI expanded into the cryptocurrency business through its integration with Uphold (fka Bitreserve) in 2014. Prior to GBI, he was formerly Co-Founder of the Agricultural Company of America (AGCoA), one of the largest farmland REITs in the U.S. at the time of its sale to the Canadian Pension Plan Investment Board (CPPIB) in 2013. Previously, from 1992-2012, Dan was a macro-focused portfolio manager and analyst at Duquesne Capital Management, SAC Capital Advisors, Tiger Management and Steinhardt Management Co. Dan graduated Phi Beta Kappa from Brown University, where he earned his B.A.'90 and M.A.'91 in European History. Dan has been on the Board of Trustees of the Lawrenceville School for the past 15 years and currently leads the Investment Committee for its endowment.\"\n",
+    "\n",
+    "prompt = \"\"\"You will be interviewing Dan Tapiero. You will be given Dan Tapiero's biography. Based on the biography, you will come up with questions that you would ask Dan Tapiero in an interview. The questions should be insightful and thought-provoking. Be sure to ask questions that will help you understand the speaker's perspective and opinions on the topic.\n",
+    "\n",
+    "DAN TAPIERO'S BIOGRAPHY:\n",
+    "{biography}\n",
+    "\n",
+    "QUESTIONS TO ASK DAN IN AN INTERVIEW:\"\"\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "response = llm.complete(prompt.format(biography=bio))\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(response.text)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "print(documents_ultimate[0].page_content)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "1 text chunks after repacking\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from llama_index.core.response_synthesizers import TreeSummarize\n",
     "import nest_asyncio\n",
@@ -149,34 +247,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "The two transcribed texts, \"The Impact of Artificial Intelligence - Verify You're Human; Ask Me Anything\" and \"AI: The Ultimate Human Invention?\" both explore the transformative potential of artificial intelligence (AI) across various industries, highlighting its historical evolution, current applications, and future implications. \n",
-      "\n",
-      "**Similarities:**\n",
-      "1. **Historical Context and Evolution:** Both texts provide a timeline of AI's development, mentioning key milestones such as the Turing Test, the creation of Deep Blue, and the emergence of generative AI models like ChatGPT. This historical perspective sets the stage for understanding AI's current capabilities and future potential.\n",
-      "\n",
-      "2. **Generative AI and Its Applications:** Both texts emphasize the role of generative AI in revolutionizing industries by enabling machines to perform tasks traditionally done by humans. Examples include creating new content, automating processes, and enhancing decision-making. The texts mention applications in sectors like healthcare, automotive, and entertainment.\n",
-      "\n",
-      "3. **Market Impact and Investment Opportunities:** Both texts discuss the significant impact of AI on financial markets, highlighting companies like Nvidia, Microsoft, and Google as key players benefiting from AI advancements. They note the surge in stock prices for these companies, driven by investor enthusiasm for AI technologies.\n",
-      "\n",
-      "4. **Challenges and Ethical Considerations:** Both texts address the challenges associated with AI, such as the need for high-quality data, computing power, and ethical considerations. They emphasize the importance of developing trustworthy AI practices to ensure data privacy and unbiased decision-making.\n",
-      "\n",
-      "5. **Future Outlook and Workforce Implications:** Both texts speculate on AI's future, considering its potential to drive productivity and efficiency while also raising concerns about job displacement. They highlight the need for AI skills in the workforce and the potential for AI to create new job opportunities.\n",
-      "\n",
-      "**Examples from the Texts:**\n",
-      "- The first text discusses AI's impact on businesses and the economy, with specific use cases in marketing, automotive, and healthcare. It also highlights the investment case for AI, noting the significant returns for companies like Nvidia.\n",
-      "- The second text provides a broader view of AI's adoption across industries, citing surveys that show widespread use of AI in automating processes and improving efficiency. It also discusses the ethical challenges and the need for transparent AI practices.\n",
-      "\n",
-      "For consultant companies looking to provide AI solutions, these texts offer valuable insights into the current landscape of AI, the industries most affected, and the key players driving innovation. Understanding these aspects can help consultants tailor their services to meet the specific needs of businesses looking to leverage AI technologies.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "print(response)"
    ]
