updates to tutorials

--- a/llm_judge/fsi_summary_vllm.ipynb
+++ b/llm_judge/fsi_summary_vllm.ipynb
@@ -6,29 +6,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# cd /workspace/model && wget https://huggingface.co/bartowski/DeepSeek-R1-Distill-Qwen-32B-GGUF/resolve/main/DeepSeek-R1-Distill-Qwen-32B-Q4_K_M.gguf?download=true\n",
-    "# cd /workspace/model && wget https://huggingface.co/bartowski/Qwen_QwQ-32B-GGUF/blob/main/Qwen_QwQ-32B-Q4_K_M.gguf\n",
-    "\n",
-    "\n",
-    "# vllm serve /workspace/model/DeepSeek-R1-Distill-Qwen-32B-Q4_K_M.gguf \\\n",
-    "# --tokenizer deepseek-ai/DeepSeek-R1-Distill-Qwen-32B\n",
-    "# --gpu-memory-utilization 1.0\n",
-    "# --host 0.0.0.0\n",
-    "\n",
-    "# vllm serve \"empirischtech/DeepSeek-R1-Distill-Qwen-32B-gptq-4bit\" \\\n",
-    "# vllm serve /workspace/model/DeepSeek-R1-Distill-Qwen-32B-Q4_K_M.gguf \\\n",
-    "# vllm serve \"unsloth/DeepSeek-R1-Distill-Qwen-32B-unsloth-bnb-4bit\" \\\n",
-    "# --quantization bitsandbytes \\\n",
-    "# --load-format bitsandbytes \\\n",
-    "\n",
     "# vllm serve \"Qwen/QwQ-32B-AWQ\" \\\n",
-    "# vllm serve \"Valdemardi/DeepSeek-R1-Distill-Qwen-32B-AWQ\" \\\n",
-    "# --enforce-eager \\\n",
-    "# --max_model_len 32000 \\\n",
-    "# --gpu-memory-utilization .0 \\\n",
-    "# --port 8008 \\\n",
-    "# --host 0.0.0.0\n",
-    "# --tokenizer deepseek-ai/DeepSeek-R1-Distill-Qwen-32B \\\n",
+    "vllm serve \"Valdemardi/DeepSeek-R1-Distill-Qwen-32B-AWQ\" \\\n",
+    "--enforce-eager \\\n",
+    "--max_model_len 32000 \\\n",
+    "--gpu-memory-utilization 0.7 \\\n",
+    "--port 8008 \\\n",
+    "--host 0.0.0.0\n",
     "\n",
     "# vllm serve BAAI/bge-m3 --trust-remote-code --task embed --port 8008 --host 0.0.0.0"
    ]
