--- a/tutorials/model_merging.ipynb
+++ b/tutorials/model_merging.ipynb
@@ -29,15 +29,136 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "36020612b8244c199a73221031b41914",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Loading checkpoint shards:   0%|          | 0/14 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "42f0d17fbfb54ddf9045cfd1ee6ddc5b",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "tokenizer_config.json:   0%|          | 0.00/8.29k [00:00<?, ?B/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "19b7fc34c2f6442fb3a949c74c3ecc5d",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "vocab.json:   0%|          | 0.00/2.78M [00:00<?, ?B/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "668ffbebecab4ec2b4d0169497e9db29",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "merges.txt:   0%|          | 0.00/1.67M [00:00<?, ?B/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "f3fe9851689b491c8748a1478ef77d01",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "tokenizer.json:   0%|          | 0.00/7.03M [00:00<?, ?B/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "2895aff5d10f4e2db0c8183c1a1ebe2e",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "added_tokens.json:   0%|          | 0.00/707 [00:00<?, ?B/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "408554f9ddf84d5abe33f4f18824b50a",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "special_tokens_map.json:   0%|          | 0.00/613 [00:00<?, ?B/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "c5bf6b8fff5348d6a02c0c9ea7c1b1b7",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Loading checkpoint shards:   0%|          | 0/8 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
+    "import gc\n",
     "from transformers import AutoTokenizer, AutoModelForCausalLM\n",
+    "\n",
     "model_a_name = \"Qwen/QwQ-32B\"\n",
     "model_b_name = \"deepseek-ai/DeepSeek-R1-Distill-Qwen-32B\"\n",
+    "\n",
     "model_a = AutoModelForCausalLM.from_pretrained(model_a_name)\n",
-    "model_b = AutoModelForCausalLM.from_pretrained(model_b_name)\n",
     "tokenizer_a = AutoTokenizer.from_pretrained(model_a_name)\n",
-    "tokenizer_b = AutoTokenizer.from_pretrained(model_b_name)\n"
+    "del model_a, tokenizer_a\n",
+    "gc.collect()\n",
+    "\n",
+    "model_b = AutoModelForCausalLM.from_pretrained(model_b_name)\n",
+    "tokenizer_b = AutoTokenizer.from_pretrained(model_b_name)\n",
+    "del model_b, tokenizer_b\n",
+    "gc.collect()"
    ]
   },
   {
