updates to tutorials

--- a/tutorials/vllm_model_merging_awq.ipynb
+++ b/tutorials/vllm_model_merging_awq.ipynb
@@ -109,11 +109,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Quantize model\n",
-    "\n",
     "from awq import AutoAWQForCausalLM\n",
     "\n",
-    "model_path = \"/workspace/model_merged_daretie\"\n",
+    "model_path = \"/workspace/model_merged_daretie/\"\n",
+    "quant_path = \"/workspace/model_merged_daretie_quant/\"\n",
+    "\n",
     "model = AutoAWQForCausalLM.from_pretrained(\n",
     "    model_path, **{\"low_cpu_mem_usage\": True, \"use_cache\": False}\n",
     ")\n",
@@ -123,7 +123,18 @@
     "  \"q_group_size\": 128,\n",
     "  \"w_bit\": 4,\n",
     "  \"version\": \"GEMM\"\n",
-    "}"
+    "}\n",
+    "\n",
+    "tokenizer = AutoTokenizer.from_pretrained(model_path, trust_remote_code=True)\n",
+    "\n",
+    "# Quantize\n",
+    "model.quantize(tokenizer, quant_config=quant_config)\n",
+    "\n",
+    "# Save quantized model\n",
+    "model.save_quantized(quant_path)\n",
+    "tokenizer.save_pretrained(quant_path)\n",
+    "\n",
+    "print(f'Model is quantized and saved at \"{quant_path}\"')"
    ]
   },
   {
