updates, merge yaml fixes

--- a/llm_judge/fsi_summary_vllm.ipynb
+++ b/llm_judge/fsi_summary_vllm.ipynb
@@ -7,14 +7,25 @@
    "outputs": [],
    "source": [
     "# vllm serve \"Qwen/QwQ-32B-AWQ\" \\\n",
-    "vllm serve \"Valdemardi/DeepSeek-R1-Distill-Qwen-32B-AWQ\" \\\n",
-    "--enforce-eager \\\n",
-    "--max_model_len 32000 \\\n",
-    "--gpu-memory-utilization 0.7 \\\n",
-    "--port 8008 \\\n",
-    "--host 0.0.0.0\n",
+    "# vllm serve \"Valdemardi/DeepSeek-R1-Distill-Qwen-32B-AWQ\" \\\n",
+    "# --enforce-eager \\\n",
+    "# vllm serve /workspace/model_merged_daretie_quant/ \\\n",
+    "# --max_model_len 28000 \\\n",
+    "# --gpu-memory-utilization 0.7 \\\n",
+    "# --max-num-batched-tokens 1000 \\\n",
+    "# --quantization awq \\\n",
+    "# --dtype float16 \\\n",
+    "# --port 8008 \\\n",
+    "# --host 0.0.0.0\n",
     "\n",
     "# vllm serve BAAI/bge-m3 --trust-remote-code --task embed --port 8008 --host 0.0.0.0"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "!pip3 install --upgrade transformers"
    ]
   },
   {
@@ -398,8 +409,10 @@
     "        # await ctx.set(\"summary_llm\", Ollama(model=local_model_name, url=\"http://127.0.0.1:11434\", context_window=summary_ctx_len, model_type=\"chat\", is_function_calling_model=True, \n",
     "        #                                     request_timeout=4000.0, additional_kwargs=additional_kwargs, keep_alive=0, system_prompt=system_prompt))\n",
     "\n",
+    "        vllm_model = \"/workspace/model_merged_daretie_quant/\"\n",
+    "        # vllm_model = \"Valdemardi/DeepSeek-R1-Distill-Qwen-32B-AWQ\"\n",
     "        await ctx.set(\"local_llm\", OpenAILike(\n",
-    "                                            model=\"Valdemardi/DeepSeek-R1-Distill-Qwen-32B-AWQ\",\n",
+    "                                            model=vllm_model,\n",
     "                                            temperature=0.6,\n",
     "                                            system_prompt=system_prompt,\n",
     "                                            api_base=\"http://0.0.0.0:8008/v1\",\n",
@@ -412,7 +425,7 @@
     "                                        )\n",
     "                    )\n",
     "        await ctx.set(\"summary_llm\", OpenAILike(\n",
-    "                                            model=\"Valdemardi/DeepSeek-R1-Distill-Qwen-32B-AWQ\",\n",
+    "                                            model=vllm_model,\n",
     "                                            temperature=0.6,\n",
     "                                            system_prompt=system_prompt,\n",
     "                                            api_base=\"http://0.0.0.0:8008/v1\",\n",
@@ -447,20 +460,6 @@
     "\n",
     "        return SummarizationEvent(result={})\n",
     "    \n",
-    "    @step\n",
-    "    async def summarize(self, ctx: Context, ev: SummarizationEvent) -> KeyPointsEvent | RefineSummariesEvent:\n",
-    "        documents = await ctx.get(\"documents\")\n",
-    "        summary_length = await ctx.get('summary_length')\n",
-    "        tasks = [self._summarize_section(ctx, section) for section in documents]\n",
-    "        results = await asyncio.gather(*tasks)\n",
-    "        summaries = dict(results)\n",
-    "        await ctx.set(\"summaries\", summaries)\n",
-    "        # ev.result['summaries'] = summaries\n",
-    "        if summary_length == 'short':\n",
-    "            return KeyPointsEvent(result=ev.result)\n",
-    "        else:\n",
-    "            return RefineSummariesEvent(result=ev.result)\n",
-    "        \n",
     "    @step\n",
     "    async def summarize(self, ctx: Context, ev: SummarizationEvent) -> KeyPointsEvent | RefineSummariesEvent:\n",
     "        documents = await ctx.get(\"documents\")\n",
@@ -606,8 +605,10 @@
    ]
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
+   "outputs": [],
    "source": [
     "fake_relevant_section_dict = {k:v for k,v in relevant_sections_dict.items() if k in [\"IV. Analysis of the Costs and Benefits Associated With the Proposed Rule\"]}"
    ]
@@ -625,8 +626,8 @@
     "\n",
     "c = RuleSummarizationFlow(timeout=12000, verbose=True)\n",
     "# Pass in the data\n",
-    "# result = await c.run(rule_proposal_sections=fake_relevant_section_dict, \n",
-    "result = await c.run(rule_proposal_sections=relevant_sections_dict, \n",
+    "result = await c.run(rule_proposal_sections=fake_relevant_section_dict, \n",
+    "# result = await c.run(rule_proposal_sections=relevant_sections_dict, \n",
     "                     request_for_comments=request_for_comments, \n",
     "                     guiding_principles=guiding_principles,\n",
     "                     compliance_guidance=\"Do not include any information about requests for comments or instructions to commenters.\",\n",
