--- a/tutorials/model_merging.ipynb
+++ b/tutorials/model_merging.ipynb
@@ -23,13 +23,6 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
    "source": [
     "import gc\n",
     "from transformers import AutoTokenizer, AutoModelForCausalLM\n",
@@ -54,7 +47,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "!mergekit-yaml /workspace/repos/agentic-ai/tutorials/merge_models.yml /workspace/models"
+    "!mergekit-yaml /workspace/repos/agentic-ai/tutorials/merge_models.yml /workspace/model_merged_daretie/"
    ]
   },
   {
@@ -64,6 +57,10 @@
    "outputs": [],
    "source": [
     "from awq import AutoAWQForCausalLM\n",
+    "from transformers import AutoTokenizer\n",
+    "\n",
+    "model_path = \"/workspace/model_merged_daretie/\"\n",
+    "quant_path = \"/workspace/model_merged_daretie_quant/\"\n",
     "\n",
     "model = AutoAWQForCausalLM.from_pretrained(\n",
     "    model_path, **{\"low_cpu_mem_usage\": True, \"use_cache\": False}\n",
@@ -74,16 +71,17 @@
     "  \"q_group_size\": 128,\n",
     "  \"w_bit\": 4,\n",
     "  \"version\": \"GEMM\"\n",
-    "}"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "!echo $HF_HOME"
+    "}\n",
+    "\n",
+    "# Quantize\n",
+    "tokenizer = AutoTokenizer.from_pretrained(model_path, trust_remote_code=True)\n",
+    "model.quantize(tokenizer, quant_config=quant_config)\n",
+    "\n",
+    "# Save quantized model\n",
+    "model.save_quantized(quant_path)\n",
+    "tokenizer.save_pretrained(quant_path)\n",
+    "\n",
+    "print(f'Model is quantized and saved at \"{quant_path}\"')"
    ]
   },
   {
