--- a/tutorials/vllm_model_merging_awq.ipynb
+++ b/tutorials/vllm_model_merging_awq.ipynb
@@ -110,6 +110,7 @@
    "outputs": [],
    "source": [
     "from awq import AutoAWQForCausalLM\n",
+    "from transformers import AutoTokenizer\n",
     "\n",
     "model_path = \"/workspace/model_merged_daretie/\"\n",
     "quant_path = \"/workspace/model_merged_daretie_quant/\"\n",
