--- a/llm_judge/fsi_summary_vllm.ipynb
+++ b/llm_judge/fsi_summary_vllm.ipynb
@@ -9,10 +9,12 @@
     "# vllm serve \"Qwen/QwQ-32B-AWQ\" \\\n",
     "# vllm serve \"Valdemardi/DeepSeek-R1-Distill-Qwen-32B-AWQ\" \\\n",
     "# --enforce-eager \\\n",
-    "vllm serve /workspace/model_merged_daretie_quant/ \\\n",
+    "# vllm serve /workspace/model_merged_daretie_quant/ \\\n",
+    "# vllm serve \"Qwen/QwQ-32B-AWQ\" \\\n",
+    "# --quantization awq_marlin \\\n",
+    "vllm serve \"Valdemardi/DeepSeek-R1-Distill-Qwen-32B-AWQ\" \\\n",
     "--max_model_len 28000 \\\n",
     "--gpu-memory-utilization 0.8 \\\n",
-    "--quantization awq_marlin \\\n",
     "--dtype float16 \\\n",
     "--port 8008 \\\n",
     "--host 0.0.0.0\n",
@@ -36,35 +38,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "The autoreload extension is already loaded. To reload it, use:\n",
-      "  %reload_ext autoreload\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "https://www.federalregister.gov/documents/full_text/xml/2024/05/21/2024-10738.xml\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "200"
-      ]
-     },
-     "execution_count": 4,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "%load_ext autoreload\n",
     "%autoreload 2\n",
@@ -99,17 +75,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Customer Identification Programs for Registered Investment Advisers and Exempt Reporting Advisers\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from preprocess_rule import parse_xml_title\n",
     "\n",
@@ -119,29 +87,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Rule Introduction: first page = 44571, last page = 44572, tokens = 912.5\n",
-      "I. Background: first page = 44572, last page = 44573, tokens = 2573.75\n",
-      "II. Section-by-Section Analysis: first page = 44573, last page = 44579, tokens = 9697.5\n",
-      "III. Request for Comments: first page = 44579, last page = 44580, tokens = 1182.5\n",
-      "IV. Analysis of the Costs and Benefits Associated With the Proposed Rule: first page = 44580, last page = 44588, tokens = 13596.25\n",
-      "V. Paperwork Reduction Act: first page = 44588, last page = 44592, tokens = 1631.25\n",
-      "VI. Regulatory Flexibility Act: first page = 44592, last page = 44594, tokens = 3261.25\n",
-      "VII. Considerations of the Impact on the Economy: first page = None, last page = None, tokens = 255.0\n",
-      "VIII. FinCEN's Regulatory Impact Analysis: first page = 44594, last page = 44595, tokens = 1101.25\n",
-      "IX. FinCEN's Unfunded Mandates Reform Act Determination: first page = None, last page = None, tokens = 275.0\n",
-      "Authority and Issuance: first page = 44595, last page = 44597, tokens = 3558.75\n",
-      "All Titles\n",
-      " ['Rule Introduction', 'I. Background', 'II. Section-by-Section Analysis', 'III. Request for Comments', 'IV. Analysis of the Costs and Benefits Associated With the Proposed Rule', 'V. Paperwork Reduction Act', 'VI. Regulatory Flexibility Act', 'VII. Considerations of the Impact on the Economy', \"VIII. FinCEN's Regulatory Impact Analysis\", \"IX. FinCEN's Unfunded Mandates Reform Act Determination\", 'Authority and Issuance']\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from preprocess_rule import parse_and_clean_xml, clean_xml_text, get_page_numbers\n",
     "from llama_index.core import Document\n",
@@ -176,18 +124,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "The autoreload extension is already loaded. To reload it, use:\n",
-      "  %reload_ext autoreload\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "%load_ext autoreload\n",
     "%autoreload 2\n",
@@ -668,7 +607,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -677,73 +616,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Running step initialize\n"
-     ]
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "176ad305a97a479b99ba17872a3aff64",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Parsing nodes:   0%|          | 0/1 [00:00<?, ?it/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "dc9accb811614f3db1817cee69e52e5b",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Generating embeddings:   0%|          | 0/268 [00:00<?, ?it/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "1104.0\n",
-      "Step initialize produced event SummarizationEvent\n",
-      "Running step summarize\n",
-      "  Summarizing section: IV. Analysis of the Costs and Benefits Associated With the Proposed Rule...\n",
-      "Step summarize produced event RefineSummariesEvent\n",
-      "Running step refine_summaries\n",
-      "  Refining summary section: IV. Analysis of the Costs and Benefits Associated With the Proposed Rule...\n",
-      "  IV. Analysis of the Costs and Benefits Associated With the Proposed Rule Number of words: 769\n",
-      "Step refine_summaries produced event KeyPointsEvent\n",
-      "Running step summary_bullet_points\n",
-      "  Extracting key bullet points for section: IV. Analysis of the Costs and Benefits Associated With the Proposed Rule...\n",
-      "Step summary_bullet_points produced event FactCheckingEvent\n",
-      "Running step fact_checking\n",
-      "  Fact checking bullets: IV. Analysis of the Costs and Benefits Associated With the Proposed Rule...\n",
-      "Step fact_checking produced event KeyPointsGPEvent\n",
-      "Running step guiding_principles_bullet_points\n",
-      "  Extracting key bullet points for section: IV. Analysis of the Costs and Benefits Associated With the Proposed Rule...\n",
-      "Step guiding_principles_bullet_points produced event FormatSummaryOutputEvent\n",
-      "Running step format_summary_output\n",
-      "  Formatting summary output: IV. Analysis of the Costs and Benefits Associated With the Proposed Rule...\n",
-      "  IV. Analysis of the Costs and Benefits Associated With the Proposed Rule Number of words: 540\n",
-      "Step format_summary_output produced event StopEvent\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "## Runnining the workflow\n",
     "# Load the guiding principles\n",
@@ -768,12 +643,24 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "import json\n",
+    "formatted_summaries = await result.get('formatted_summaries')\n",
+    "with open(f'/workspace/{rule_title}.json'.replace(' ','_'), 'w') as f:\n",
+    "    json.dump(formatted_summaries, f, indent=4)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "raise"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -790,7 +677,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
