--- a/tutorials/model_merging.ipynb
+++ b/tutorials/model_merging.ipynb
@@ -24,6 +24,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "!pip3 uninstall -y torch torchvision torchaudio transformers\n",
+    "!pip3 install torch==2.5.1 transformers==4.47.1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "import gc\n",
     "from transformers import AutoTokenizer, AutoModelForCausalLM\n",
     "\n",
@@ -84,6 +94,13 @@
     "\n",
     "print(f'Model is quantized and saved at \"{quant_path}\"')"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
